[data-table] fixed collapsing of header grouped cells

--- a/semcore/data-table/src/style/data-table.shadow.css
+++ b/semcore/data-table/src/style/data-table.shadow.css
@@ -65,6 +65,7 @@ SColumn[group][use] {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  align-items: normal;
   border-bottom: none;
   padding: 0;
 }
